2013-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-configuration):
	Use w3m-language rather than w3m-use-japanese-menu.

2013-04-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-add-name-anchors): Fix regexp matching name
	anchors.  Reported by Dan Jacobson <jidanni@jidanni.org>.

2013-04-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-get-by-name): Distinguish the type of forms of
	the same names.  Reported by Kevin Ryde <user42@zip.com.au>.
	(w3m-form-resume, w3m-form-parse-and-fontify, w3m-form-input-map): Do.

2013-04-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-fix-tfoot-rendering): New filter.
	(w3m-filter-configuration): Add it but not activate.

	* w3m-ems.el (w3m-image-multi-frame-p): New alias.
	(w3m-image-animate): Use it.

2013-02-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Remove workaround.
	* w3m-util.el (w3m-force-window-update-later): Make 1st arg optional.
	* w3m-ems.el (w3m-force-window-update): A window need to be redisplayed
	for `force-window-update' to work (see the docstring).

2013-01-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-lnum.el (w3m-lnum-read-interactive): Replace w3m-scroll-up-1 with
	w3m-scroll-up.

	* w3m.el (w3m-scroll-up): Rename from w3m-scroll-up-1.
	(w3m-scroll-up, w3m-scroll-up-or-next-url): Make the bottom of a page
	border on the bottom of a screen when having finished scrolling
	the page up.
	(w3m-scroll-down): New function detached from
	w3m-scroll-down-or-previous-url.
	(w3m-scroll-down-or-previous-url): Move point to the top when having
	finished scrolling a page down.
	(w3m-mwheel-scroll-up, w3m-mwheel-scroll-down): New functions.
	(w3m-mode): Bind mwheel-scroll-(up,down)-function to
	w3m-mwheel-scroll-(up,down).
	Suggested by Dan Jacobson <jidanni@jidanni.org>.

2013-01-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Do (sit-for 0) to update the